deploy/platform/observability/monitoring/grafana-gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: monitoring
spec:
  gatewayClassName: traefik
  listeners:
    - name: web-grafana
      protocol: HTTP
      port: 8000
      hostname: grafana.teamdevops.shop
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: monitoring-gateway
  hostnames:
    - grafana.teamdevops.shop
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
